--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
-<style type="css/text"> 
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<style>
 #top {
 	width:100%;
 	background-color:#9FF;
@@ -59,7 +59,7 @@
       <form action="" method="post">
         Login:  <input type="text" name="username" placeholder="username"/>	
         <input type="password" placeholder="password"/>
-        <img src="FBloginbutton.png" width="108" height="34" />
+        <a href="SignIn"><img src="FBloginbutton.png" width="108" height="34" /></a>
       </form>
     </div>
 </div>
