--- a/src/main/webapp/createPost.html
+++ b/src/main/webapp/createPost.html
@@ -54,7 +54,7 @@
 </head>
 <body style="padding:20px;">
 <div id="top">
-    <div id="welcome">Welcome to BarterSpace!</div>
+    <div id="welcome"><h1>Welcome to BarterSpace!<h1></div>
     <div id="login" style="float:right">
       <form action="" method="post">
         Login:  <input type="text" name="username" placeholder="username"/>	
@@ -67,8 +67,9 @@
 <h2>Create a new post</h2>
 	<form action="" method="post">
     	<input type="text" placeholder="Title"/><br /><br />
-        <textarea placeholder="Enter post text here..."></textarea><br /><br />
-    	<input type="submit" /> <input type="reset" />
+        <textarea rows="10" cols="50" placeholder="Enter post text here..."></textarea><br /><br />
+        <input type="file" name="photo" size="50" />
+    	<input type="submit" value="Create"/><input type="reset" />
     </form>
 </p>
 
